# Whisper

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  run.sh  whisper.db-shm  whisper.db-wal
.github/workflows/: ci.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: CreateGroupModal.tsx  Dashboard.tsx  GroupCard.tsx  JoinGroupModal.tsx  SignedOut.tsx
service/: pom.xml
service/src/main/java/dev/adi_ua/whisper/: WhisperServiceApplication.java  WordGen.java
service/src/main/java/dev/adi_ua/whisper/config/: NoOpSecurityConfig.java  SecurityConfig.java  WebConfig.java
service/src/main/java/dev/adi_ua/whisper/controller/: AuthController.java  GroupController.java  HealthController.java  RotateController.java
service/src/main/java/dev/adi_ua/whisper/model/: Group.java  Member.java
service/src/main/java/dev/adi_ua/whisper/service/: AllowlistService.java  DatabaseService.java  GroupRepository.java  NotifyService.java  RotationService.java
service/src/main/resources/: application.properties
service/src/test/java/dev/adi_ua/whisper/: GroupControllerTest.java  HealthControllerTest.java  RotateControllerTest.java  WhisperServiceApplicationTests.java
wordgen/: Cargo.toml
wordgen/src/: jni_bridge.rs  lib.rs  wordlist.rs
