[package]
name = "whisper-wordgen"
version = "0.1.0"
edition = "2021"
description = "Cryptographically fair two-word phrase generator with no-repeat sliding window"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
jni = "0.21"

[dev-dependencies]
proptest = "1"
